# strace-macos

./: CONTRIBUTING.md  README.md  flake.nix  pyproject.toml  setup.cfg  setup.py  strace-macos-wrapper.sh  syscall-test-todo.md
.github/workflows/: tests.yml
strace_macos/: __main__.py  arch.py  exceptions.py  lldb_loader.py  sip.py  string_quote.py  tracer.py
strace_macos/interpose/: __init__.py  fork_interpose.c
strace_macos/syscalls/: args.py  category.py  formatters.py  numbers.py  registry.py
strace_macos/syscalls/definitions/: __init__.py  debug.py  file.py  ipc.py  memory.py  misc.py  network.py  process.py  security.py  signal.py  sysinfo.py  thread.py  time.py
strace_macos/syscalls/struct_decoders/: __init__.py  attrlist.py  fssearchblock.py  int_ptr.py  iovec.py  kevent.py  msghdr.py  sockaddr.py  statfs.py  sysctl.py  termios.py  winsize.py
strace_macos/syscalls/struct_params/: __init__.py  aiocb.py  aiocb_array.py  attrlist.py  event_structs.py  fssearchblock.py  int_ptr.py  iovec.py  ipc_structs.py  msghdr.py  process_structs.py  sigevent.py  signal_structs.py  sockaddr.py  stat.py  statfs.py  termios.py  winsize.py
strace_macos/syscalls/symbols/: __init__.py  (+9 more)
tests/: base.py  test_color_output.py  test_fd_syscalls.py  test_file_metadata_syscalls.py  test_file_utilities_syscalls.py  test_filtering.py  test_follow_multiple_processes.py  test_fork_exec_syscalls.py  test_ipc_aio_syscalls.py  test_kqueue_select_syscalls.py  test_memory_syscalls.py  test_network_syscalls.py  test_process_advanced.py  test_process_identity.py  test_signal_syscalls.py  test_sip_protection.py  test_spawn.py  test_string_quote.py  test_symbolic_decoding.py  test_system_info_syscalls.py
tests/fixtures/: Makefile  mode_fd_ops.h  mode_file_metadata.h  mode_file_utilities.h  mode_follow_fork.h  mode_fork_exec.h  mode_ipc_aio.h  mode_kqueue_select.h  mode_memory.h  mode_misc.h  mode_network.h  mode_process_advanced.h  mode_process_identity.h  mode_process_identity.h.gch  mode_signal.h  mode_sysinfo.h  modes.h  syscall_test_helpers.py  test_executable.c
