[project]
name = "strace-macos"
version = "0.1.0"
description = "System call tracer for macOS using LLDB"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
strace = "strace_macos.__main__:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "E501",    # line too long (handled by formatter)
    "D",       # pydocstyle (documentation)
    "ANN",     # flake8-annotations
    "COM812",  # missing-trailing-comma (conflicts with formatter)
    "ISC001",  # single-line-implicit-string-concatenation (conflicts with formatter)
    "S607",    # partial executable path (xcrun is standard)
    "S604",    # shell injection (we control the inputs)
    "PLR2004", # magic values (syscall numbers are naturally magic)
    "T201",    # print statements (used for debugging)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # use of assert (standard in tests)
    "S603",    # subprocess call (controlled test inputs)
    "PLR2004", # magic value comparison (test values are naturally magic)
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_calls = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
exclude = ["setup.py"]

[[tool.mypy.overrides]]
module = "lldb"
ignore_missing_imports = true
