[metadata]
name = strace-macos
version = 0.1.0
description = System call tracer for macOS using LLDB
python_requires = >=3.9

[options]
packages = find:
include_package_data = False

[options.packages.find]
exclude = tests*

[options.entry_points]
console_scripts =
    strace = strace_macos.__main__:main
